# MinLish-App--Learn-English

./: .gitignore  BACKEND_AND_NEXT_PHASE_PLAN.md  IMPLEMENTATION_PLAN.md  MODULE_TASK_PLAN.md  PROFILE_CODE_FLOW.md  QA_CHECKLIST.md  README.md  feature_status.md  gradle.properties  project_requirment.md  settings.gradle.kts
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: README
backend/alembic/versions/: 20260526_0001_auth_tables.py  20260526_0002_seed_decks_vocabulary.py  20260527_0003_learning_tables.py  20260527_0004_notification_preferences.py  20260527_0005_email_otp_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  deck.py  notification_preference.py  progress.py  refresh_token.py  user.py  vocabulary_item.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  deck.py  learning.py  notification.py  user.py  vocabulary.py
backend/app/scripts/: __init__.py  import_anki_apkg.py  send_due_email_reminders.py
backend/app/services/: analytics_service.py  anki_import_service.py  auth_service.py  deck_service.py  email_reminder_scheduler.py  email_service.py  import_export_service.py  sm2_service.py  (+2 more)
backend/minlish_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_analytics.py  test_anki_import.py  test_auth.py  test_decks.py  test_health.py  test_learning.py  test_notifications.py  test_sm2_service.py
(+213 files in other folders)
